src/test/ui/parser/keyword-continue-as-identifier.stderr
error: expected identifier, found keyword `continue`
  --> $DIR/keyword-continue-as-identifier.rs:4:9
   |
LL |     let continue = "foo";
   |         ^^^^^^^^ expected identifier, found keyword
   |
help: escape `continue` to use it as an identifier
   |
LL |     let r#continue = "foo";
   |         ++

error: aborting due to previous error

