src/test/ui/parser/keyword-continue-as-identifier.rs
// This file was auto-generated using 'src/etc/generate-keyword-tests.py continue'

fn main() {
    let continue = "foo"; //~ error: expected pattern, found keyword `continue`
}
